# scraper_task

./: .env.example  PLANNING.md  README.md  REPORT.md  TASK.md  app.py  docker-compose.yml  main.py  pyproject.toml  setup.py
.github/: copilot-instructions.md
data/chroma/: chroma.sqlite3
src/: config.py  database.py  extractor.py  main.py  models.py  search.py  summarizer.py  ui.py
tests/: test_config.py  test_database.py  test_extractor.py  test_search.py  test_summarizer.py  test_summarizer_fixed.py  test_ui.py
