[tool.poetry]
name = "scraper-task"
version = "0.1.0"
description = "News scraper with GenAI, ChromaDB, Streamlit"
authors = ["Aleksey Lyzo <lyzo.alex@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
