[tool.poetry]
name = "scraper-task"
version = "0.1.0"
description = "News scraper with GenAI, ChromaDB, Streamlit"
authors = ["Aleksey Lyzo <lyzo.alex@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.4"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
python-dotenv = "^1.1.0"
langchain = {extras = ["openai"], version = "^0.3.25"}
langchain-openai = "^0.3.16"
chromadb = "0.6.3"
langchain-chroma = "0.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
